--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0101HelloWorld.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0101HelloWorld.razor
@@ -1,10 +1,13 @@
-﻿@page "/01helloworld"
+﻿@page "/0101helloworld"
 
 <PageTitle>Hello World</PageTitle>
 
 <button @onclick="SayHello">Say Hello</button>
 
-<h1>@message</h1>
+<br />
+<br />
+
+<pre>@message</pre>
 
 @code {
     private string message = "";
