--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
@@ -1,4 +1,4 @@
-﻿@page "/0102helloworldmultiline"
+﻿@page "/0102hellomultiline"
 
 <PageTitle>Hello World multi line</PageTitle>
 
@@ -16,7 +16,7 @@
 
     private void SayHello()
     {
-        message = "Hello world!!!";
-        message += Environment.NewLine + "Greetings from IMBI DSS";
+        message = "Hello world!!!" + Environment.NewLine 
+            + "Greetings from IMBI DSS";
     }
 }
