--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/Index.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/Index.razor
@@ -2,10 +2,11 @@
 
 <PageTitle>IMBI DSS</PageTitle>
 
+<h1>IMBI DSS</h1>
+
+IMBI DSS examples. Insert the page info into the browser address bar to execute the example.
+
+
 <!--
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
 <SurveyPrompt Title="How is Blazor working for you?" />
 -->
