--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0104Comments.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0104Comments.razor
@@ -1,6 +1,6 @@
 ﻿@page "/0104comments"
 
-<PageTitle>Hello World multi line</PageTitle>
+<PageTitle>Comments</PageTitle>
 
 <button @onclick="Execute">Do It!</button>
 
