--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
@@ -12,6 +12,7 @@
 <br/>
 
 <button @onclick="Add">Add</button> &nbsp; <button @onclick="Subtract">Subtract</button> &nbsp;
+<button @onclick="Multiply">Multiply</button> &nbsp;
 
 <br/>
 <br/>
@@ -37,6 +38,13 @@
     {
         int difference = numberOne - numberTwo;
         message = "Difference is " + difference;
+        message = message + Environment.NewLine;
+    }
+
+    private void Multiply()
+    {
+        int product = numberOne * numberTwo;
+        message = "Product is " + product;
         message = message + Environment.NewLine;
     }
 }
