dodao dva primera

--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
@@ -16,6 +16,9 @@
 
 <br/>
 <br/>
+You can try to enter "normal" integers, very large integers, numbers that are not 
+integers and texts that are not numbers at all.
+<br/>
 <br/>
 
 <div style="border:solid; border-color:black">
