--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
@@ -18,5 +18,6 @@
     {
         message = "Hello world!!!" + Environment.NewLine 
             + "Greetings from IMBI DSS";
+        System.Console.WriteLine("Value for the variable message is set to " + message);
     }
 }
