--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0104Comments.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0104Comments.razor
@@ -18,7 +18,7 @@
         // This is an example of single-line comment
 
         // The following statement assign "Mickey Mouse" to variable message
-        message = "Mickey Mouse";
+        message = message + "Mickey Mouse";
 
         message = message + Environment.NewLine; // this concatenate new line char to the contents of message variable 
 
