--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0105InputOutput.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0105InputOutput.razor
@@ -1,14 +1,21 @@
 ﻿@page "/0105inputoutput"
 
 <PageTitle>Input and output</PageTitle>
-
 <br/>
-<input @bind="userInput"/>
+<table>
+    <tr>
+        <td>Input:</td>
+        <td><input @bind="userInput"/></td>
+    </tr>
+    <tr>
+        <td style="text-align:center" colspan="2">
+            <button @onclick="Write">Write</button>
+            <button @onclick="Clear">Clear</button>
+        </td>
+    </tr>
+</table>
 <br/>
-<br/>
-<button @onclick="Execute">Hello!</button>
-<button @onclick="Clear">Clear</button>
-<br/>
+Output:
 <br/>
 <div style="border:solid; border-color:black">
   <pre>@message</pre>
@@ -24,7 +31,7 @@
         System.Console.WriteLine("Message is cleared.");
     }
 
-    private void Execute()
+    private void Write()
     {
         message = message + userInput + Environment.NewLine;
         System.Console.WriteLine("Text is appended to message. Text: " + userInput);
