--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
@@ -1,7 +1,7 @@
 ﻿@page "/0102hellomultiline"
 
 <PageTitle>Hello World multi line</PageTitle>
-
+<h1>Hello World multi line</h1>
 <br/>
 <button @onclick="SayHello">Say Hello</button>
 <br/>
