--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0201IntVariables.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0201IntVariables.razor
@@ -1,10 +1,11 @@
 ﻿@page "/0201intvariables"
 
 <PageTitle>Variables int</PageTitle>
-
+<h1>Type int</h1>
 <br/>
 <button @onclick="Execute">Do It!</button>
 <br/>
+Output:
 <br/>
 <div style="border:solid; border-color:black">
   <pre>@message</pre>
