--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0203ByteShortLongVariables.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0203ByteShortLongVariables.razor
@@ -1,11 +1,12 @@
 ﻿@page "/0203byteshortlongvariables"
 
 <PageTitle>Variables byte short long</PageTitle>
-
+<h1>Types byte short long</h1>
 <br/>
-<button @onclick="Execute">Do It!</button>
+<button @onclick="Execute">Do It!</button>&nbsp;
 <button @onclick="Clear">Clear</button>
 <br/>
+Output:
 <br/>
 <div style="border:solid; border-color:black">
   <pre>@message</pre>
