--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0205CharVariables.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0205CharVariables.razor
@@ -1,9 +1,9 @@
 ﻿@page "/0205charvariables"
 
 <PageTitle>Variables char</PageTitle>
-
+<h1>Type char</h1>
 <br/>
-<button @onclick="Execute">Do It!</button>
+<button @onclick="Execute">Do It!</button>&nbsp;
 <button @onclick="Clear">Clear</button>
 <br/>
 <br/>
