--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0206BoolVariables.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0206BoolVariables.razor
@@ -1,9 +1,9 @@
 ﻿@page "/0206boolvariables"
 
 <PageTitle>Variables bool</PageTitle>
-
+<h1>Type bool</h1>
 <br/>
-<button @onclick="Execute">Do It!</button>
+<button @onclick="Execute">Do It!</button>&nbsp;
 <button @onclick="Clear">Clear</button>
 <br/>
 <br/>
