--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0302IfElseBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0302IfElseBranch.razor
@@ -1,7 +1,7 @@
 ﻿@page "/0302ifelsebranch"
 
-<PageTitle>Minimum</PageTitle>
-
+<PageTitle>Circumference and Area</PageTitle>
+<h1>Circumference and Area</h1>
 <br/>
 <select @bind="shape">
   <option value="square">Square</option>
@@ -11,7 +11,7 @@
 <input @bind="x"/>
 <br/>
 <br/>
-<button @onclick="CircumferenceArea">Circumference and Area</button> &nbsp; 
+<button @onclick="CircumferenceArea">Calculate</button> &nbsp; 
 <br/>
 <br/>
 <br/>
