--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0303SwitchBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0303SwitchBranch.razor
@@ -1,7 +1,7 @@
 ﻿@page "/0303switchbranch"
 
-<PageTitle>Minimum</PageTitle>
-
+<PageTitle>Function calculation</PageTitle>
+<h1>Function calculation</h1>
 <br/>
 Operation: 
 <select @bind="selector">
