--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0304SwitchStringSelector.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0304SwitchStringSelector.razor
@@ -1,7 +1,6 @@
-﻿@page "/0303zswitchbranch"
-
-<PageTitle>Minimum</PageTitle>
-
+﻿@page "/0304switchstringselector"
+<h1>Function evaluation</h1>
+<PageTitle>Function evaluation</PageTitle>
 <br/>
 Operation: 
 <select @bind="selector">
