--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0101HelloWorld.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0101HelloWorld.razor
@@ -1,7 +1,7 @@
 ﻿@page "/0101helloworld"
 
 <PageTitle>Hello World</PageTitle>
-
+<h1>Hello world</h1>
 <br/>
 <button @onclick="SayHello">Say Hello</button>
 <br />
