--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0104Comments.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0104Comments.razor
@@ -1,7 +1,7 @@
 ﻿@page "/0104comments"
 
 <PageTitle>Comments</PageTitle>
-
+<h1>Comments</h1>
 <br/>
 <button @onclick="Execute">Do It!</button>
 <br/>
