--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
@@ -1,23 +1,33 @@
 ﻿@page "/0202intoperators"
 
 <PageTitle>Operators int</PageTitle>
-
-<br/>
-<input @bind="numberOne"/>
-<br/>
-<input @bind="numberTwo"/>
-<br/>
-<br/>
-<button @onclick="Add">Add</button> &nbsp; <button @onclick="Subtract">Subtract</button> &nbsp;
-<button @onclick="Multiply">Multiply</button> &nbsp;
-<br/>
+<h1>Integer operators</h1>
 <br/>
 You can try to enter "normal" integers, very large integers, numbers that are not 
 integers and texts that are not numbers at all.
 <br/>
+<table>
+    <tr>
+        <td>First argument:</td>
+        <input @bind="numberOne"/>
+    </tr>
+    <tr>
+        <td>Second argument:</td>
+        <input @bind="numberTwo"/>
+    </tr>
+    <tr>
+        <td style="text-align:center" colspan="2">
+            <button @onclick="Add">Add</button> &nbsp; 
+            <button @onclick="Subtract">Subtract</button> &nbsp;
+            <button @onclick="Multiply">Multiply</button>
+        </td>
+    </tr>
+</table>
+<br/>
+Output:
 <br/>
 <div style="border:solid; border-color:black">
-  <pre>@message</pre>
+  <p>@message</p>
 </div>
 
 @code {
@@ -30,20 +40,17 @@ integers and texts that are not numbers at all.
     {
         int sum = numberOne + numberTwo;
         message = "Sum is " + sum;
-        message = message + Environment.NewLine;
     }
 
     private void Subtract()
     {
         int difference = numberOne - numberTwo;
         message = "Difference is " + difference;
-        message = message + Environment.NewLine;
     }
 
     private void Multiply()
     {
         int product = numberOne * numberTwo;
         message = "Product is " + product;
-        message = message + Environment.NewLine;
     }
 }
