--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0204DoubleFloatVariables.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0204DoubleFloatVariables.razor
@@ -1,11 +1,12 @@
 ﻿@page "/0204doublefloatvariables"
 
-<PageTitle>Variables double float</PageTitle>
-
+<PageTitle>Types double float</PageTitle>
+<h1>Types double float</h1>
 <br/>
-<button @onclick="Execute">Do It!</button>
+<button @onclick="Execute">Do It!</button>&nbsp;
 <button @onclick="Clear">Clear</button>
 <br/>
+Output:
 <br/>
 <div style="border:solid; border-color:black">
   <pre>@message</pre>
