--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0102HelloMultiLine.razor
@@ -1,4 +1,4 @@
-﻿@page "/0102hellomultiline"
+﻿@page "/0102HelloMultiLine"
 
 <PageTitle>Hello World multi line</PageTitle>
 <h1>Hello World multi line</h1>
