--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0202IntOperators.razor
@@ -1,4 +1,4 @@
-﻿@page "/0202intoperators"
+﻿@page "/0202IntOperators"
 
 <PageTitle>Operators int</PageTitle>
 <h1>Integer operators</h1>
@@ -9,11 +9,11 @@ integers and texts that are not numbers at all.
 <table>
     <tr>
         <td>First argument:</td>
-        <input @bind="numberOne"/>
+        <input style="text-align:right" @bind="numberOne"/>
     </tr>
     <tr>
         <td>Second argument:</td>
-        <input @bind="numberTwo"/>
+        <input style="text-align:right" @bind="numberTwo"/>
     </tr>
     <tr>
         <td style="text-align:center" colspan="2">
