--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0301IfBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0301IfBranch.razor
@@ -1,4 +1,4 @@
-﻿@page "/0301ifbranch"
+﻿@page "/0301IfBranch"
 
 <PageTitle>Minimum</PageTitle>
 <h1>Minimum</h1>
@@ -8,35 +8,37 @@ You can try to enter integers, real numbers and texts that are not numbers at al
 <table>
     <tr>
         <td>First argument:</td>
-        <td><input @bind="x"/></td>
+        <td><input style="text-align:right" @bind="x"/></td>
     </tr>
     <tr>
         <td>Second argument:</td>
-        <td><input @bind="y"/></td>
+        <td><input style="text-align:right" @bind="y"/></td>
     </tr>
     <tr>
         <td>Third argument:</td>
-        <td><input @bind="z"/></td>
+        <td><input style="text-align:right" @bind="z"/></td>
     </tr>
     <tr>
         <td>Fourth argument:</td>
-        <td><input @bind="w"/></td>
+        <td><input style="text-align:right" @bind="w"/></td>
     </tr>
     <tr>
         <td style="text-align:center" colspan="2">
             <button @onclick="Minimum">Determine Minimum</button> &nbsp; 
         </td>
     </tr>
+    <tr>
+        <td>Result:</td>
+        <td><input style="text-align:right" @bind="result"/></td>
+    </tr>
 </table>
 <br/>
-<input @bind="result"/>
-
 @code {
 
     private double x=0;
-    private double y=0;
-    private double z = 0;
-    private double w = 0;
+    private double y=-1.5;
+    private double z = 1.5;
+    private double w = 2;
     private double result;
 
     private void Minimum()
