--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0302IfElseBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0302IfElseBranch.razor
@@ -1,23 +1,40 @@
-﻿@page "/0302ifelsebranch"
+﻿@page "/0302IfElseBranch"
 
 <PageTitle>Circumference and Area</PageTitle>
 <h1>Circumference and Area</h1>
 <br/>
-<select @bind="shape">
-  <option value="square">Square</option>
-  <option value="circle">Circle</option>
-</select>
+<table>
+    <tr>
+        <td>Shape:</td>
+        <td>
+            <select @bind="shape">
+              <option value="square">Square</option>
+              <option value="circle">Circle</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>Argument:</td>
+        <td>
+            <input style="text-align:right" @bind="x"/>
+        </td>
+    </tr>
+    <tr>
+        <td style="text-align:center" colspan="2">
+            <button @onclick="CircumferenceArea">Calculate</button> &nbsp; 
+        </td>
+    </tr>
+    <tr>
+        <td>Circumference:</td>
+        <td><input style="text-align:right" @bind="circumference"/></td>
+    </tr>
+    <tr>
+        <td>Area:</td>
+        <td><input style="text-align:right" @bind="area"/></td>
+    </tr>
+</table>
 <br/>
-<input @bind="x"/>
-<br/>
-<br/>
-<button @onclick="CircumferenceArea">Calculate</button> &nbsp; 
-<br/>
-<br/>
-<br/>
-<input @bind="circumference"/>
-<br/>
-<input @bind="area"/>
+
 
 
 @code {
