--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0303SwitchBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0303SwitchBranch.razor
@@ -1,27 +1,38 @@
-﻿@page "/0303switchbranch"
+﻿@page "/0303SwitchbBranch"
 
 <PageTitle>Function calculation</PageTitle>
 <h1>Function calculation</h1>
 <br/>
-Operation: 
-<select @bind="selector">
-  <option value="0">sinus</option>
-  <option value="1">sinus + cosine</option>
-  <option value="2">exponent</option>
-  <option value="3">square root</option>
-  <option value="4">other...</option>
-</select>
+<table>
+    <tr>
+        <td>Operation:</td>
+        <td>
+            <select @bind="selector">
+              <option value="0">sinus</option>
+              <option value="1">sinus + cosine</option>
+              <option value="2">exponent</option>
+              <option value="3">square root</option>
+              <option value="4">other...</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>Argument:</td>
+        <td>
+            <input style="text-align:right" @bind="x"/>
+        </td>
+    </tr>
+    <tr>
+        <td style="text-align:center" colspan="2">
+            <button @onclick="CalculateFunction">Calculate</button> &nbsp; 
+        </td>
+    </tr>
+    <tr>
+        <td>Result:</td>
+        <td><input style="text-align:right" @bind="f"/></td>
+    </tr>
+ </table>
 <br/>
-Argument: <input @bind="x"/>
-<br/>
-<br/>
-<button @onclick="CalculateFunction">Calculate</button> &nbsp; 
-<br/>
-<br/>
-<br/>
-<input @bind="f"/>
-<br/>
-
 
 @code {
 
