--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0304SwitchStringSelector.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0304SwitchStringSelector.razor
@@ -1,28 +1,39 @@
-﻿@page "/0304switchstringselector"
-<h1>Function evaluation</h1>
+﻿@page "/0304SwitchStringSelector"
 <PageTitle>Function evaluation</PageTitle>
+<h1>Function evaluation</h1>
 <br/>
-Operation: 
-<select @bind="selector">
-  <option value="sin">sinus</option>
-  <option value="sinpcos">sinus + cosine</option>
-  <option value="exp">exponent</option>
-  <option value="sqrt">square root</option>
-  <option value="sqr">square</option>
-  <option value="log">logarithm</option>
-  <option value="other">other...</option>
-</select>
+<table>
+    <tr>
+        <td>Operation:</td>
+        <td>
+            <select @bind="selector">
+              <option value="sin">sinus</option>
+              <option value="sinpcos">sinus + cosine</option>
+              <option value="exp">exponent</option>
+              <option value="sqrt">square root</option>
+              <option value="sqr">square</option>
+              <option value="log">logarithm</option>
+              <option value="other">other...</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>Argument:</td>
+        <td>
+            <input style="text-align:right" @bind="x"/>
+        </td>
+    </tr>
+    <tr>
+        <td style="text-align:center" colspan="2">
+            <button @onclick="CalculateFunction">Calculate</button> &nbsp; 
+        </td>
+    </tr>
+    <tr>
+        <td>Result:</td>
+        <td><input style="text-align:right" @bind="f"/></td>
+    </tr>
+ </table> 
 <br/>
-Argument: <input @bind="x"/>
-<br/>
-<br/>
-<button @onclick="CalculateFunction">Calculate</button> &nbsp; 
-<br/>
-<br/>
-<br/>
-<input @bind="f"/>
-<br/>
-
 
 @code {
 
