while i do while

--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0401WhileLoopFactorial.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0401WhileLoopFactorial.razor
@@ -68,7 +68,7 @@
         long fakt = 1;
         while (i >= 1)
         {
-            fakt = fakt * i;
+            fakt *= i; // fakt = fakt * i;
             i--;
         }
         factoriel = fakt;
@@ -90,7 +90,7 @@
         long fakt = 1;
         while (n>0)
         {
-            fakt = fakt * n;
+            fakt *= n; 
             n--;
         }
         factoriel = fakt;
