--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0403DoWhileLoopFactorial.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0403DoWhileLoopFactorial.razor
@@ -45,7 +45,7 @@
         long fakt = 1;
         do
         {
-            fakt = fakt * i;
+            fakt *= i;
             i++;
         }
         while (i <= n);
@@ -76,7 +76,7 @@
         int i = n;
         do
         {
-            fakt = fakt * i;
+            fakt *= i;
             i--;
         }
         while (i >= 1);
@@ -106,7 +106,7 @@
         }
         do
         {
-            fakt = fakt * n;
+            fakt *= n;
             n--;
         }
         while (n > 0) ;
