--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0301IfBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0301IfBranch.razor
@@ -23,8 +23,13 @@ You can try to enter integers, real numbers and texts that are not numbers at al
         <td><input style="text-align:right" @bind="w"/></td>
     </tr>
     <tr>
+        <td>Fifth argument:</td>
+        <td><input style="text-align:right" @bind="t"/></td>
+    </tr>
+    <tr>
         <td style="text-align:center" colspan="2">
             <button @onclick="Minimum">Determine Minimum</button> &nbsp; 
+            <button @onclick="Maximum">Determine Maximum</button> &nbsp;
         </td>
     </tr>
     <tr>
@@ -39,11 +44,11 @@ You can try to enter integers, real numbers and texts that are not numbers at al
     private double y=-1.5;
     private double z = 1.5;
     private double w = 2;
+    private double t = -0.7;
     private double result;
 
     private void Minimum()
     {
-        System.Console.WriteLine("x: " + x + " y: " + y + " z: " + z + " w: " + w);
         double min = x;
         if (y < min)
             min = y;
@@ -51,8 +56,22 @@ You can try to enter integers, real numbers and texts that are not numbers at al
             min = z;
         if (w < min)
             min = w;
+        if (t < min)
+            min = t;
         result = min;
-        System.Console.WriteLine("Minimum for x, y, z, w: " + min);
-        System.Console.WriteLine();       
+    }
+
+    private void Maximum()
+    {
+        double max = x;
+        if (y > max)
+            max = y;
+        if (z > max)
+            max = z;
+        if (w > max)
+            max = w;
+        if (t > max)
+            max = t;
+        result = max;
     }
 }
