--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0304SwitchBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0304SwitchBranch.razor
@@ -1,19 +1,18 @@
-﻿@page "/0304SwitchStringSelector"
-<PageTitle>Function evaluation</PageTitle>
-<h1>Function evaluation</h1>
+﻿@page "/0304SwitchbBranch"
+
+<PageTitle>Function calculation</PageTitle>
+<h1>Function calculation</h1>
 <br/>
 <table>
     <tr>
         <td>Operation:</td>
         <td>
             <select @bind="selector">
-              <option value="sin">sinus</option>
-              <option value="sinpcos">sinus + cosine</option>
-              <option value="exp">exponent</option>
-              <option value="sqrt">square root</option>
-              <option value="sqr">square</option>
-              <option value="log">logarithm</option>
-              <option value="other">other...</option>
+              <option value="0">sinus</option>
+              <option value="1">sinus + cosine</option>
+              <option value="2">exponent</option>
+              <option value="3">square root</option>
+              <option value="4">other...</option>
             </select>
         </td>
     </tr>
@@ -32,12 +31,12 @@
         <td>Result:</td>
         <td><input style="text-align:right" @bind="f"/></td>
     </tr>
- </table> 
+ </table>
 <br/>
 
 @code {
 
-    private string selector = "sinpcos";
+    private int selector = 1;
 
     private double x = 0;
 
@@ -49,23 +48,17 @@
         System.Console.WriteLine("Argument: " + x);
         switch (selector)
         {
-            case "sin":
+            case 0:
                 f = System.Math.Sin(x);
                 break;
-            case "sinpcos":
+            case 1:
                 f = System.Math.Sin(x) + System.Math.Cos(x);
                 break;
-            case "exp":
+            case 2:
                 f = System.Math.Exp(x);
                 break;
-            case "sqrt":
+            case 3:
                 f = System.Math.Sqrt(x);
-                break;
-            case "sqr":
-                f = x * x;
-                break;
-            case "log":
-                f = System.Math.Log(x);
                 break;
             default: //if i is not in the set {0,1,2,3}
                 f = x;
