--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0401WhileLoopFactorial.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0401WhileLoopFactorial.razor
@@ -19,7 +19,7 @@
     </tr>
     <tr>
         <td>@num !:</td>
-        <td><input style="text-align:right" @bind="factoriel"/></td>
+        <td><input style="text-align:right" @bind="result"/></td>
     </tr>
  </table> 
 <br/>
@@ -28,7 +28,7 @@
 
     private int num = 0;
 
-    private long factoriel;
+    private long result = 1;
 
     private void FactorialByCountForward()
     {
@@ -38,7 +38,7 @@
         if(n<0)
         {
             Console.WriteLine("Error - argument is negative.");
-            factoriel = long.MinValue;
+            result = long.MinValue;
             return;
         }
         int i = 1;
@@ -48,8 +48,8 @@
             fakt = fakt * i;
             i++;
         }
-        factoriel = fakt;
-        System.Console.WriteLine("Result: " + factoriel);
+        result = fakt;
+        System.Console.WriteLine("Result: " + result);
         System.Console.WriteLine();
     }
 
@@ -61,7 +61,7 @@
         if (n < 0)
         {
             Console.WriteLine("Error - argument is negative.");
-            factoriel = long.MinValue;
+            result = long.MinValue;
             return;
         }
         int i = n;
@@ -71,8 +71,8 @@
             fakt *= i; // fakt = fakt * i;
             i--;
         }
-        factoriel = fakt;
-        System.Console.WriteLine("Result: " + factoriel);
+        result = fakt;
+        System.Console.WriteLine("Result: " + result);
         System.Console.WriteLine();
     }
 
@@ -84,7 +84,7 @@
         if (n < 0)
         {
             Console.WriteLine("Error - argument is negative.");
-            factoriel = long.MinValue;
+            result = long.MinValue;
             return;
         }
         long fakt = 1;
@@ -93,8 +93,8 @@
             fakt *= n; 
             n--;
         }
-        factoriel = fakt;
-        System.Console.WriteLine("Result: " + factoriel);
+        result = fakt;
+        System.Console.WriteLine("Result: " + result);
         System.Console.WriteLine();
     }
 
