--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0403DoWhileLoopFactorial.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0403DoWhileLoopFactorial.razor
@@ -19,7 +19,7 @@
     </tr>
     <tr>
         <td>@num !:</td>
-        <td><input style="text-align:right" @bind="factoriel"/></td>
+        <td><input style="text-align:right" @bind="result"/></td>
     </tr>
  </table> 
 <br/>
@@ -28,7 +28,7 @@
 
     private int num = 0;
 
-    private long factoriel;
+    private long result = 1;
 
     private void FactorialByCountForward()
     {
@@ -38,7 +38,7 @@
         if (n < 0)
         {
             Console.WriteLine("Error - argument is negative.");
-            factoriel = long.MinValue;
+            result = long.MinValue;
             return;
         }
         int i = 1;
@@ -49,8 +49,8 @@
             i++;
         }
         while (i <= n);
-        factoriel = fakt;
-        System.Console.WriteLine("Result: " + factoriel);
+        result = fakt;
+        System.Console.WriteLine("Result: " + result);
         System.Console.WriteLine();
     }
 
@@ -62,14 +62,14 @@
         if (n < 0)
         {
             Console.WriteLine("Error - argument is negative.");
-            factoriel = long.MinValue;
+            result = long.MinValue;
             return;
         }
         long fakt = 1;
         if (n == 0)
         {
-            factoriel = fakt;
-            System.Console.WriteLine("Result: " + factoriel);
+            result = fakt;
+            System.Console.WriteLine("Result: " + result);
             System.Console.WriteLine();
             return;
         }
@@ -80,8 +80,8 @@
             i--;
         }
         while (i >= 1);
-        factoriel = fakt;
-        System.Console.WriteLine("Result: " + factoriel);
+        result = fakt;
+        System.Console.WriteLine("Result: " + result);
         System.Console.WriteLine();
     }
 
@@ -93,14 +93,14 @@
         if (n < 0)
         {
             Console.WriteLine("Error - argument is negative.");
-            factoriel = long.MinValue;
+            result = long.MinValue;
             return;
         }
         long fakt = 1;
         if (n == 0)
         {
-            factoriel = fakt;
-            System.Console.WriteLine("Result: " + factoriel);
+            result = fakt;
+            System.Console.WriteLine("Result: " + result);
             System.Console.WriteLine();
             return;
         }
@@ -110,8 +110,8 @@
             n--;
         }
         while (n > 0) ;
-        factoriel = fakt;
-        System.Console.WriteLine("Result: " + factoriel);
+        result = fakt;
+        System.Console.WriteLine("Result: " + result);
         System.Console.WriteLine();
     }
 
