--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0404DoWhileLoopPower.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0404DoWhileLoopPower.razor
@@ -36,7 +36,7 @@
 
     private int exponent = 0;
 
-    private double result;
+    private double result = 1;
 
     private void PowerByCountForward()
     {
