--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0406ForLoopPower.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0406ForLoopPower.razor
@@ -35,7 +35,7 @@
 
     private int exponent = 0;
 
-    private double result;
+    private double result = 1;
 
     private void PowerByCountForward()
     {
