--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0604ArrayMinMax.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0604ArrayMinMax.razor
@@ -1,4 +1,4 @@
-﻿@page "/0301IfBranch"
+﻿@page "/0604ArrayMinMax"
 
 <PageTitle>Minimum and Maximum</PageTitle>
 <h1>Minimum and Maximum</h1>
@@ -8,23 +8,23 @@ You can try to enter integers, real numbers and texts that are not numbers at al
 <table>
     <tr>
         <td>First argument:</td>
-        <td><input style="text-align:right" @bind="x"/></td>
+        <td><input style="text-align:right" @bind="elements[0]"/></td>
     </tr>
     <tr>
         <td>Second argument:</td>
-        <td><input style="text-align:right" @bind="y"/></td>
+        <td><input style="text-align:right" @bind="elements[1]"/></td>
     </tr>
     <tr>
         <td>Third argument:</td>
-        <td><input style="text-align:right" @bind="z"/></td>
+        <td><input style="text-align:right" @bind="elements[2]"/></td>
     </tr>
     <tr>
         <td>Fourth argument:</td>
-        <td><input style="text-align:right" @bind="w"/></td>
+        <td><input style="text-align:right" @bind="elements[3]"/></td>
     </tr>
     <tr>
         <td>Fifth argument:</td>
-        <td><input style="text-align:right" @bind="t"/></td>
+        <td><input style="text-align:right" @bind="elements[4]"/></td>
     </tr>
     <tr>
         <td style="text-align:center" colspan="2">
@@ -40,38 +40,38 @@ You can try to enter integers, real numbers and texts that are not numbers at al
 <br/>
 @code {
 
-    private double x=0;
-    private double y=-1.5;
-    private double z = 1.5;
-    private double w = 2;
-    private double t = -0.7;
+    private double[] elements = {-1.5, 1.5, 2, 0.7, 5 };
     private double result;
+
+    private double Min(double[] arr)
+    {
+        double res = arr[0];
+        foreach(double x in arr)
+        {
+            if (x < res)
+                res = x;
+        }
+        return res;
+    }
+
+    private double Max(double[] arr)
+    {
+        double res = arr[0];
+        foreach (double x in arr)
+        {
+            if (x > res)
+                res = x;
+        }
+        return res;
+    }
 
     private void Minimum()
     {
-        double min = x;
-        if (y < min)
-            min = y;
-        if (z < min)
-            min = z;
-        if (w < min)
-            min = w;
-        if (t < min)
-            min = t;
-        result = min;
+        result = Min(elements);
     }
 
     private void Maximum()
     {
-        double max = x;
-        if (y > max)
-            max = y;
-        if (z > max)
-            max = z;
-        if (w > max)
-            max = w;
-        if (t > max)
-            max = t;
-        result = max;
+        result = Max(elements);
     }
 }
