--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0302aIfElseBranch.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0302aIfElseBranch.razor
@@ -1,4 +1,4 @@
-﻿@page "/0302IfElseBranch"
+﻿@page "/0302aIfElseBranch"
 
 <PageTitle>Circumference and Area</PageTitle>
 <h1>Circumference and Area</h1>
@@ -10,6 +10,7 @@
             <select @bind="shape">
               <option value="square">Square</option>
               <option value="circle">Circle</option>
+              <option value="rectangle">Rectangle</option>
             </select>
         </td>
     </tr>
@@ -19,6 +20,15 @@
             <input style="text-align:right" @bind="x"/>
         </td>
     </tr>
+    @if (shape == "rectangle")
+    {
+        <tr>
+            <td>Second argument:</td>
+            <td>
+                <input style="text-align:right" @bind="y"/>
+            </td>
+        </tr>
+    }
     <tr>
         <td style="text-align:center" colspan="2">
             <button @onclick="CircumferenceArea">Calculate</button> &nbsp; 
@@ -40,9 +50,11 @@
 @code {
     private double pi = Math.PI;
 
-    private string shape = "";
+    private string shape = "circle";
 
-    private double x = 0;
+    private double x = 1;
+
+    private double y = 2;
 
     private double circumference;
 
@@ -60,6 +72,11 @@
         {
             circumference = 4 * x;
             area = x * x;
+        }
+        else if (shape == "rectangle")
+        {
+            circumference = 2 * (x + y);
+            area = x * y;
         }
         else
         {
