--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0306SwitchMultiSelector.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0306SwitchMultiSelector.razor
@@ -42,6 +42,8 @@
             case "<":
             case ">":
             case "==":
+            case ">=":
+            case "<=":
                 message = oper + " is relational operator";
                 System.Console.WriteLine(message);
                 break;
@@ -53,6 +55,12 @@
             case "~":
             case "^":
                 message = oper + " is bitwise operator";
+                System.Console.WriteLine(message);
+                break;
+            case "!":
+            case "&&":
+            case "||":
+                message = oper + " is logical operator";
                 System.Console.WriteLine(message);
                 break;
             default:
