--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0401WhileLoopFactorial.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0401WhileLoopFactorial.razor
@@ -18,7 +18,7 @@
         </td>
     </tr>
     <tr>
-        <td>@num !:</td>
+        <td style="text-align:right">@num !:</td>
         <td><input style="text-align:right" @bind="result"/></td>
     </tr>
  </table> 
@@ -46,7 +46,7 @@
         while (i <= n)
         {
             fakt = fakt * i;
-            i++;
+            i++; // i += 1; // i = i +1;
         }
         result = fakt;
         System.Console.WriteLine("Result: " + result);
