--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0503aFunctionGuessing.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0503aFunctionGuessing.razor
@@ -1,4 +1,4 @@
-﻿@page "/0502aIfElseBranchGuessing"
+﻿@page "/0503aFunctionGuessing"
 
 <PageTitle>Guessing Game</PageTitle>
 <h1>Guessing Game</h1>
