--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Shared/MainLayout.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Shared/MainLayout.razor
@@ -1,17 +1,17 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <!--
+    
     <div class="sidebar">
         <NavMenu />
     </div>
-    -->
+    
     <main>
-        <!--
+        
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://ekof-dss.github.io/" target="_blank">About</a>
         </div>
-        -->
+        
         <article>
             @Body
         </article>
