--- a/03-c#-blazor-actors/06-actors-click/Components/Actors.razor.css
+++ b/03-c#-blazor-actors/06-actors-click/Components/Actors.razor.css
@@ -25,7 +25,7 @@
 }
 
 .heroes li.selected {
-    background-color: black;
+    background-color: green;
     color: white;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .heroes li.selected:active {
-    background-color: black;
+    background-color: darkgreen;
     color: white;
 }
 
