--- a/03-c#-blazor-actors/11-actors-service-add/Components/Dashboard.razor.css
+++ b/03-c#-blazor-actors/11-actors-service-add/Components/Dashboard.razor.css
@@ -24,7 +24,7 @@ a {
     font-size: 1.2rem;
     text-decoration: none;
     display: inline-block;
-    color: #fff;
+    color: bisque;
     text-align: center;
     width: 100%;
     min-width: 70px;
@@ -44,5 +44,5 @@ a {
 }
 
 a:hover {
-    background-color: #000;
+    background-color: aqua;
 }
