--- a/03-c#-blazor-actors/01-actors-new/Shared/MainLayout.razor.css
+++ b/03-c#-blazor-actors/01-actors-new/Shared/MainLayout.razor.css
@@ -14,7 +14,7 @@
 
 .top-row {
     background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
+    border-bottom: 2px solid #4cff00;
     justify-content: flex-end;
     height: 3.5rem;
     display: flex;
