--- a/03-c#-blazor-actors/02-actors-display/Shared/MainLayout.razor
+++ b/03-c#-blazor-actors/02-actors-display/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 @inherits LayoutComponentBase
 
 <div class="page">
+    @* I want that rihgt meny with links dosn't show*@
     @* <div class="sidebar">
         <NavMenu />
         </div> *@
