--- a/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0101HelloWorld.razor
+++ b/02-c#-blazor-simple-app/BlazorApp1/Client/Pages/0101HelloWorld.razor
@@ -9,7 +9,7 @@
 <pre>@message</pre>
   
 @code {
-    private string message = "";
+    private string message = "MICKEY MOUSE";
 
     private void SayHello()
     {
